sent for review , first draft, received comments from Prof.Anshul

--- a/synopsis/basicInfo_v2.tex
+++ b/synopsis/basicInfo_v2.tex
@@ -118,9 +118,9 @@
 	9. References - 2 pages
 \end{comment}
 \section{Introduction}
-Last few years have seen rapid growth in Deep Neural Network (DNN) based applications due to their high accuracy. To achieve high accuracy modern DNNs perform compute and memory intensive operations. To improve the user experience and eliminate network bandwidth issues manufacturers are shifting the processing of DNNs from cloud to edge devices like smart-phones, tablets etc. These battery operated edge devices have limited resources and tight energy budget which poses additional challenges in DNNs processing on edge devices. 
+Last few years have seen rapid growth in Deep Neural Network (DNN) based applications due to their high accuracy. To achieve high accuracy modern DNNs perform compute and memory intensive operations. To improve the user experience and eliminate network bandwidth issues manufacturers are shifting the processing of DNNs from cloud to edge devices like smart-phones, tablets etc. These battery operated edge devices have limited resources and tight energy budget which poses additional challenges in processing of DNNs. 
 
-Energy efficiency and throughput are the two most important metrices for edge devices. High throughput is desired for better user-response time, energy-efficiency is of paramount importance for battery operated devices. To meet these energy and throughput demands, edge devices mostly use customized DNN accelerators.
+Energy efficiency and throughput are the two most important metrices for edge devices. While energy-efficiency is of paramount importance for battery operated devices, high throughput is desired for better user-response time. To meet these energy and throughput demands, edge devices mostly use customized DNN accelerators.
 Several FPGA~\cite{zhang2015optimizing,wei2019overcoming,gokhale2014240,8742284,gupta2015deep,alwani2016fused}, GPU~\cite{chetlur2014cudnn} and ASIC~\cite{Chen2016EyerissAS,chen2014diannao,chen2014dadiannao,du2015shidiannao} accelerators are proposed to meet the performance and energy targets. 
 %\begin{figure}[!htb]
 %	\centering
@@ -141,11 +141,12 @@ Several FPGA~\cite{zhang2015optimizing,wei2019overcoming,gokhale2014240,8742284,
 	\label{fig:acceleratorAndRoofline}
 	\vspace{-1.0em}	
 \end{figure}
+
 \figurename{~\ref{fig:typicalDNNAccelerator}} shows a typical DNN accelerator architecture, which consists of an off-chip memory and an accelerator chip. Accelerator chip mainly consists of an on-chip memory of few KBs and an array of Processing Elements (PEs). The accelerator system has multiple memory levels: off-chip memory, on-chip memory, and the registers inside the PE. Each memory level has different access latency and energy cost. The memory access energy from off-chip memory is upto two orders of magnitude higher than a PE computation operation~\cite{Chen2016EyerissAS}. It has been observed that more than 80\% of the overall energy consumption of these accelerators is due to off-chip memory accesses~\cite{chen2014diannao}. 
 
 The PE-array (\figurename{~\ref{fig:typicalDNNAccelerator}}) has large number of processing elements, capable of performing several operations per cycle. However, throughput is often limited by off-chip memory bandwidth~\cite{williams2009roofline}. Fig.~\ref{fig:roofline} shows, two kernels (A and B) with different compute intensity (FLOPS/byte). Performance of kernels are limited by the memory bandwidth, which is typically the case for most of the DNN accelerators. Kernel B, applies data-reuse techniques to improve the computational intensity compared to kernel A and achieves better througput. Better data-reuse techniques are required to improve the performance on bandwidth-limited parallel architectures. 
 
-Therefore, reducing the off-chip memory is the key to improve the throuhput and energy efficiency of DNN accelerators. There are different types of neural networks. Recurrent Neural Networks (RNNs) and Convolutional Neural Networks (CNNs) are the most popular ones. Recurrent Neural Networks (RNNs) are widely used in sequential data processing applications such as speech recognition and natural language processing, while Convolutional Neural Networks (CNNs) are used in the area of computer vision e.g., image recognition. Each type of NN has its own challenges and require specific techniques to improve the performance. Towards this end we propose approaches to improve the performance of DNN accelerators for three popular NNs. Our main contributions in this thesis dessertations are
+Therefore, reducing the off-chip memory is the key to improve the throughput and energy efficiency of DNN accelerators. There are different types of neural networks. Recurrent Neural Networks (RNNs) and Convolutional Neural Networks (CNNs) are the most popular ones. Recurrent Neural Networks (RNNs) are widely used in sequential data processing applications such as speech recognition and natural language processing, while Convolutional Neural Networks (CNNs) are used in the area of computer vision e.g., image recognition. Each type of NN has its own challenges and require specific techniques to improve the performance. Towards this end we propose approaches to improve the performance of DNN accelerators for three popular NNs. Our main contributions in this thesis dessertations are
 \begin{enumerate}
 	\item We developed an offline-tool that computes the off-chip memory accesses of CNN layers, while considering the accelerator's architectural parameters. The offline-tool explores the large search space of tile dimensions and helpful in analysing the off-chip memory accesses for different data reuse schemes.
 	\item We propose an approach that determines the optimal partitoning and scheduling scheme of the convolution (CL) and fully connected (FC) layers to mimimize the off-chip memory access and improve the energy-efficiency of CNN accelerators. We analytically express the off-chip memory accesses of CNNs  as a function of layer shapes, tiling parameters and the number of trips from the off-chip memory and express it as a constraint optimization problem. Using the above offline-tool we explore the design space to find the optimal solution. We implemented CL and FC layers on FPGA to demonstrate the efficacy of our approach compared to state of the art approaches.  
@@ -442,7 +443,7 @@ Figure \ref{fig:algo} shows a high level schematic of the FPGA implementation of
 
 During the training phase \textit{Neuron Update} component is enabled by setting (\textit{Update Enable=1}). The weights of the Neurons are updated using the distance output of the \textit{Compute Distance} module. The \textit{Neuron Update} component is also pipelined design with II=1. The pipeline stages are shown in Figure \ref{fig:NeuronUpdate}.
 \subsection{Results}
-The SOM has been implemented with a range of fixed-point formats. With fewer bits, one naturally expect that the SOM network for bacterial identification to suffer from accuracy degradation. A MATLAB simulation model was created to analyze the accuracy loss when using fixed-point implementation. We trained 10 SOMs with 10 different bacteria DNA sequences. Each SOM network has 100 neurons inside, and each neuron has 20 weights. We trained the networks by two independent training processes running in parallel. One is implemented using double precision floating point and the other is implemented with fixed-point weights. After training, we used the trained networks to identify the unknow sequence and record their scores.
+The SOM has been implemented with a range of fixed-point formats. With fewer bits, one naturally expect that the SOM network to suffer from accuracy degradation. A MATLAB simulation model was created to analyze the accuracy loss when using fixed-point implementation. We trained 10 SOMs with 10 different bacteria DNA sequences. Each SOM network has 100 neurons inside, and each neuron has 20 weights. We trained the networks by two independent training processes running in parallel. One is implemented using double precision floating point and the other is implemented with fixed-point weights. After training, we used the trained networks to identify the unknow sequence and record their scores.
 
 The FPGA design is implemented with Vivado v.2016.4 used for synthesis and analysis of the HDL Designs. Our design is implemented in VHDL and validated using the Vivado simulator. Experimentation is done for different fixed point representations of weights by modifying parameters in VHDL code. 
 
@@ -502,7 +503,7 @@ The area and power numbers for different weight resolutions are extracted from t
 The results are summarized in the Figure \ref{fig:area} and \ref{fig:energy}. Both the amount of utilized LUTs and total energy in Joule is presented against the classification error. From the figures, we can easily conclude that, we can substantially reduce the resources used and the energy by using a 16-bit fixed-point representation, without losing accuracy. We can reduce the resources even further by moving to the 12-bit representation, by sacrificing 39\% of the SOM accuracy. 
 
 \section{Conclusion}
-With the sudden surge in Neural Network based applications, there is a pressing need for improving the performance and energy efficiency of DNN accelerators for their ubiquitous usage in energy constrained devices. The performance of DNN accelerator's is limited by the memory bandwidth and off-chip memory accessed dominates the energy consumption. The key to improving the energy efficiency of these NN is reducing the expensive off-chip memory accesses. Towards this we proposed approaches to reduce the off-chip memory accesses for DNNs. The proposed approaches optimizes the improves the data reuse from on-chip memories for CNNs and LSTMs by partioning the data and scheduling the operations, without compromising the accuracy. We have also analyzed the impact of low bit resolution on the accuracy and energy, area performance. 
+With the sudden surge in Neural Network based applications, there is a pressing need for improving the performance and energy efficiency of DNN accelerators for their ubiquitous usage in energy constrained devices. The performance of DNN accelerator's is limited by the memory bandwidth and off-chip memory accesses dominates the energy consumption. The key to improving the energy efficiency of these NNs is reducing the expensive off-chip memory accesses. Towards this we proposed approaches to reduce the off-chip memory accesses for DNNs. The proposed approaches improves the data reuse from on-chip memories for CNNs and LSTMs by partioning the data and scheduling the operations. We have also analyzed the impact of low bit resolution on the accuracy and energy, area performance for NNs. 
 
 \footnotesize
 \bibliographystyle{abbrv} %IEEEtran % abbrv
