Anshul Sir Comment Rev1

--- a/synopsis/refs.bib
+++ b/synopsis/refs.bib
@@ -388,9 +388,12 @@
 	publisher={ACM New York, NY, USA}
 }
 
-
-
-
+@article{lin2016overcoming,
+  title={Overcoming challenges in fixed point training of deep convolutional networks},
+  author={Lin, Darryl D and Talathi, Sachin S},
+  journal={arXiv preprint arXiv:1607.02241},
+  year={2016}
+}
 
 @IEEEtranBSTCTL{IEEEexample:BSTcontrol,
 	CTLuse_forced_etal       = "yes",
