Updated as per Anshul Sir Comment Except 1) division between section2 and sec3 2) Section 3 and 4 to describe more about why. Planning to update the remaining comments in version 5

--- a/synopsis/refs.bib
+++ b/synopsis/refs.bib
@@ -716,3 +716,14 @@
 	number={},
 	pages={122-125},
 	month={Oct},}
+
+@article{sze2017efficient,
+  title={Efficient processing of deep neural networks: A tutorial and survey},
+  author={Sze, Vivienne and Chen, Yu-Hsin and Yang, Tien-Ju and Emer, Joel S},
+  journal={Proceedings of the IEEE},
+  volume={105},
+  number={12},
+  pages={2295--2329},
+  year={2017},
+  publisher={Ieee}
+}	
